Fri Nov 22 11:11:34 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (SHLIB_LIBS): Do not link shared against -ldb [224]

Wed Nov 13 19:20:36 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (clean-unix): Remove shared/*.

Mon Nov 11 17:01:00 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): fix memory leak
 	handling tl_data

Thu Nov  7 16:42:38 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_iters.c (glob_to_regexp): a principal glob with no @
 	defaults to @*, not @LOCAL.REAM [krb5-admin/161]
 
Wed Nov  6 10:45:12 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* server_init.c (kadm5_init): Use a more fined grained error
 		code, KADM5_MISSING_CONF_PARAMS instead of
 		KRB5_CONFIG_BADFORMAT

Wed Nov  6 16:22:05 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): don't free the
 	caller's tl_data (oops)

Fri Nov  1 13:18:40 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): update for new tl_data
 	semantics [krb5-admin/140]

Mon Oct 21 16:28:52 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): fix modify_principal's
 	handling of KADM5_TL_DATA [krb5-admin/20]

Fri Oct 18 14:24:12 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_misc_free.c, server_dict.c, adb_policy.c, adb_free.c:
 	include stdlib.h instead of malloc.h [krb5-admin/35]

	* adb_openclose.c (osa_adb_rename_db): create the destination
 	database if necessary before renaming [krb5-admin/58]

Thu Oct 17 16:22:07 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c: update for new pw_expiration semantics
 	[krb5-admin/87]

Tue Oct  8 13:33:48 1996  Barry Jaspan  <bjaspan@mit.edu>

	* adb_policy.c (osa_adb_rename_policy_db): rename
 	osa_adb_rename_policy to *_db

	* adb_openclose.c, adb_policy.c: implement database renaming;
 	also, only create a db lockfile after the database has been
 	successfully created [krb5-admin/62]
